add less release main entry point

--- a/less/main.less
+++ b/less/main.less
@@ -27,3 +27,9 @@ table {
 .maxh { height: 100% }
 .maxw { width:  100% }
 a { text-decoration: none }
+
+
+// the application itself
+// "less" directory is resolved by gulp less task to
+// path.join(process.env.PATH_ROOT, process.env.PATH_SRC, 'less')
+@import "less/main";
