--- a/less/main.less
+++ b/less/main.less
@@ -5,6 +5,10 @@
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
 
+/**********************/
+/* general SPA styles */
+/**********************/
+
 html, body {
     width:    100%;
     height:   100%;
@@ -29,7 +33,10 @@ table {
 a { text-decoration: none }
 
 
-// the application itself
+/**********************/
+/* current SPA styles */
+/**********************/
+
 // "less" directory is resolved by gulp less task to
 // path.join(process.env.PATH_ROOT, process.env.PATH_SRC, 'less')
 @import "less/main";
