--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,8 +6,8 @@
 /**********************/
 
 html, body {
-    width:    100%;
-    height:   100%;
+    width:    $width;
+    height:   $height;
     overflow: hidden;
     margin:   0;
     padding:  0;
