--- a/sass/vars.scss
+++ b/sass/vars.scss
@@ -1,5 +1,7 @@
 // @author Stanislav Kalashnik <darkpark.main@gmail.com>
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
+/* spa-app: variables */
+
 $width: 100%;
 $height: 100%;
