--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,8 +3,8 @@
 
 /* spa-app: release */
 html, body {
-    width:    $width;
-    height:   $height;
+    width:    100%;
+    height:   100%;
     overflow: hidden;
     margin:   0;
     padding:  0;
