--- a/sass/vars.scss
+++ b/sass/vars.scss
@@ -1,7 +1,7 @@
 // @author Stanislav Kalashnik <darkpark.main@gmail.com>
 // @license GNU GENERAL PUBLIC LICENSE Version 3
 
-$DEVELOP: false;
-
-@import "vars";
-@import "main";
+$width: 100%;
+$height: 100%;
+$fontSize: 15px;
+$fontFamily: arial, sans-serif;
