--- a/css/develop.css
+++ b/css/develop.css
@@ -2,7 +2,7 @@
 html, body {
     height: 100%;
     width: 100%;
-    font-size: 15px;
+    font-size: 14px;
     font-family: arial, sans-serif;
     overflow: hidden;
     margin: 0;
@@ -26,5 +26,5 @@ a {
 
 /* spa-app: develop */
 body.develop {
-    outline: 1px dashed #005000;
-    outline-offset: 1px; }
+    outline: 1px solid yellow;
+    outline-offset: -1px; }
