--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,7 +31,7 @@ a { text-decoration: none; }
 @if $DEVELOP {
     /* spa-app: develop */
     body.develop {
-        outline: 1px dashed #005000;
-        outline-offset: 1px;
+        outline: 1px solid yellow;
+        outline-offset: -1px;
     }
 }
