make page placeholders invisible out of the box (before page initialization)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,6 +27,9 @@ table {
 .maxw { width:  100% }
 a { text-decoration: none; }
 
+.invisible {
+    visibility: hidden;
+}
 
 @if $DEVELOP {
     /* spa-app: develop */
